src/objects/ACED_Asset_Indication__c.object
<CustomObject>
    <fields>
        <fullName>Actual_eInteraction__c</fullName>
        <inlineHelpText>This is a helptext for Actual eInteraction</inlineHelpText>
        <label>Actual eInteraction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <inlineHelpText>This is a helptext for Asset</inlineHelpText>
        <label>Asset</label>
        <referenceTo>ACED_Asset__c</referenceTo>
        <relationshipLabel>Asset Brand Indications</relationshipLabel>
        <relationshipName>Asset_Indications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand_Indication__c</fullName>
        <inlineHelpText>This is a helptext for Brand Indication</inlineHelpText>
        <label>Brand Indication</label>
        <referenceTo>ACED_Brand_Indications__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Asset_Indications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Brand_Indication__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is a helptext for Effort</inlineHelpText>
        <label>Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effort_eInteraction__c</fullName>
        <inlineHelpText>This is a helptext for Effort eInteraction</inlineHelpText>
        <label>Effort eInteraction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueBrand_Associations_TF__c</fullName>
        <label>UniqueBrand Associations</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Asset Brand Indication</label>
    <nameField>
        <displayFormat>AID-{0000}</displayFormat>
        <label>Asset Indication ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Brand Indications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACED_Effort_Shd_be_positive_Number</fullName>
        <active>true</active>
        <description>Users are able to change Effort value to any value greater than or equal to 0%</description>
        <errorConditionFormula>OR(Effort__c &lt;0 ,Effort__c &gt;1)</errorConditionFormula>
        <errorDisplayField>Effort__c</errorDisplayField>
        <errorMessage>Effort value should always be between 0 to 100%</errorMessage>
    </validationRules>
</CustomObject>